3.0.0 - 2025-03-16 :
====================

    * Add support for RelpayGain tags including calculation
    * Add support for original year and release year tag
    * Add support for sub title and media title tag
    * Add support for long description tag (not supported by ID3V2 tags)
    * Process directory scan and ReplayGain asynchronously
    * Speed up directory scan by at least an order of magnitude
    * Write comment to COMMENT rather than DESCRIPTION in Ogg files
    * Allow multi line comments
    * Support Ogg version tag
    * Allow ISO date values (not just year)
    * Added column with file path in browser
    * Option to hide unused fields
    * Option to hide columns
    * Option to select all files with some common property (not just album)
      by double click in browser
    * Use current sort order as base for zebra background
    * Highlight changes in browser window
    * Add columns with file information (size, bitrate, duration,...)
    * Add ASF/Windows Media support
    * Save memory (deduplicate tag and image data)
    * Optionally use similar Unicode replacement characters for reserved
      characters in file names
    * Support for powerful pattern groups in scanner (see documentation)
    * Configurable multi value separator

    * Several fixes

2.4.3 - 2016-12-05 :
====================

    * Fix two crashes in the dialog to load filenames from a file
    * Avoid a crash when adding an image and no files are selected
    * Avoid a crash when saving ID3v2.4 tags and no audio is present
    * Fix a crash when applying CDDB results
    * Fix saving of ID3v1 genres when also using ID3v2.4
    * Fix Ogg tag writing on Windows
    * Ensure that a selected path in the browser is shown in the path list
    * Open the online version of the help if Yelp is not available
    * Fix handling of MP4 files with empty tag fields
    * Fix the artist/album toolbar icon
    * Eckhard M. Jäger’s Adwaita-style artist/album icons