@@ -50,49 +50,6 @@ misc_convert_duration (void)
 }
 
 static void
-misc_normalized_strcmp0 (void)
-{
-    static const gchar str1[] = "foo";
-    static const gchar str2[] = "bar";
-    static const gchar str3[] = "BAR";
-
-    g_assert_cmpint (et_normalized_strcmp0 (NULL, NULL), ==, 0);
-    g_assert_cmpint (et_normalized_strcmp0 (str1, NULL), >, 0);
-    g_assert_cmpint (et_normalized_strcmp0 (NULL, str2), <, 0);
-    g_assert_cmpint (et_normalized_strcmp0 (str1, str2), >, 0);
-    g_assert_cmpint (et_normalized_strcmp0 (str2, str3), >, 0);
-}
-
-static void
-misc_normalized_strcasecmp0 (void)
-{
-    gsize i;
-
-    static const struct
-    {
-        const gchar *str1;
-        const gchar *str2;
-        const gint result;
-    } strings[] =
-    {
-        { NULL, NULL, 0 },
-        { "foo", NULL, 1 },
-        { NULL, "bar", -1 },
-        { "foo", "bar", -1 },
-        { "FOO", "foo", 0 },
-        { "foo", "FOO", 0 }
-        /* TODO: Add more tests. */
-    };
-
-    for (i = 0; i < G_N_ELEMENTS (strings); i++)
-    {
-        g_assert_cmpint (et_normalized_strcasecmp0 (strings->str1,
-                                                    strings->str2), ==,
-                         strings->result);
-    }
-}
-
-static void
 misc_rename_file (void)
 {
     gchar *filename1;
@@ -200,9 +157,6 @@ main (int argc, char** argv)
     g_test_init (&argc, &argv, NULL);
 
     g_test_add_func ("/misc/convert-duration", misc_convert_duration);
-    g_test_add_func ("/misc/normalized-strcmp0", misc_normalized_strcmp0);
-    g_test_add_func ("/misc/normalized-strcasecmp0",
-                     misc_normalized_strcasecmp0);
     g_test_add_func ("/misc/rename-file", misc_rename_file);
     g_test_add_func ("/misc/str-empty", misc_str_empty);
 
